2009-10-20	fixed ignoring of -D, removed usage info on failed cmdline
			parsing

2009-10-06	Switched to rsync-like progress output style

2009-09-29	Added CHANGELOG to provide more detailed information than
			the git-commit-summaries.
			
			Switched data structure for file lists from double linked
			lists to array-based ones.
			This was done because of the much simpler code compared to
			all that pointer stuff in the version with linked lists. I
			think this change does not mean any disadvantage in memory
			consumption because only the pointers to the items need to
			be stored and therefore the array itself should not get a
			significant size.
			  
2009-09-25	Added dynamic limits information, some cleanup.

2009-09-25	Some fixes, added bugs to TODO.

2009-09-24	Usage information, updated TODOs, added proper license
			information, added git-ignores to keep binaries out.

2009-09-23	Initial commit.